--- a/assets/pages/avenis.html
+++ b/assets/pages/avenis.html
@@ -410,13 +410,10 @@
                     <!-- Footer widget -->
                     <div class="col-lg-5 col-md-12">
                         <div class="ic-footer-item">
-                            <h3 class="ic-footer-widget-title"><img src="../images/sticky-logo.png" alt="" width="50%">
-                            </h3>
+                            <h3 class="ic-footer-widget-title"><img src="./assets/images/sticky-logo.png" alt="" width="50%"></h3>
                             <div class="ic-footer-widget-content">
                                 <div class="ic-footer-widget-about">
-                                    <p>Lorem ipsum dolor siti amet, consectetur adicing elit, sed do eiusmod tempor
-                                        incididunt utte labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
-                                        gravida. Risus commodo viverra maeinas accumsan lacus vel facilisis. </p>
+                                    <!-- <p>Lorem ipsum dolor siti amet, consectetur adicing elit, sed do eiusmod tempor incididunt utte labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maeinas accumsan lacus vel facilisis. </p> -->
                                     <ul class="ic-social-profile">
                                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -436,11 +433,11 @@
                             <h3 class="ic-footer-widget-title">Help & Links</h3>
                             <div class="ic-footer-widget-content">
                                 <ul class="ic-footer-menu">
-                                    <li><a href="../../product.html">Products</a></li>
-                                    <li><a href="../../gallery.html">Gallery</a></li>
-                                    <li><a href="../../about.html">About</a></li>
-                                    <li><a href="../../workshop.html">Workshop</a></li>
-                                    <li><a href="../../contact.html">Contact</a></li>
+                                    <li><a href="product.html">Products</a></li>
+                                    <li><a href="gallery.html">Gallery</a></li>
+                                    <li><a href="about.html">About</a></li>
+                                    <li><a href="workshop.html">Workshop</a></li>
+                                    <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -453,17 +450,16 @@
                             <div class="ic-footer-widget-content">
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Address</h6>
-                                    <p class="ic-contact-info">Alfanso House, 2593 Timbercrest Road, Chisana Alaska,
-                                        Badalas, United State</p>
+                                    <p class="ic-contact-info">Shop No. 8 & 9, Ghalot Majesty, Sector 46, Palm Beach Road, Seawoods, Navi Mumbai. </p>
                                 </div>
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Phone</h6>
-                                    <p class="ic-contact-info"><a href="tel:(+91)7-723-4608">(+91)7-723-4608</a></p>
+                                    <p class="ic-contact-info"><a href="tel:(+91)8058483333">(+91)8058483333</a></p>
+                                    <p class="ic-contact-info"><a href="tel:(+91)8828896711">(+91)8828896711</a></p>
                                 </div>
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Email</h6>
-                                    <p class="ic-contact-info"><a href="mailto:info@example.com">info@example.com</a>
-                                    </p>
+                                    <p class="ic-contact-info"><a href="mailto:info@example.com">info@example.com</a></p>
                                 </div>
                             </div>
                         </div>
@@ -476,7 +472,7 @@
         <div class="ic-footer-bottom ic-padding-40">
             <div class="container">
                 <div class="ic-copyright-text text-center">
-                    <p>© Copyright 2022 <a href="../../index.html">Moonstone Conceptss.</a> All Rights Reserved.
+                    <p>© Copyright 2022 <a href="index.html">Moonstone Conceptss.</a> All Rights Reserved. 
                 </div>
                 <!-- <div class="ic-footer-payment text-center">
                     <img src="./assets/images/payment-method.png" alt="payment-mathod">
