--- a/shop.html
+++ b/shop.html
@@ -870,7 +870,7 @@
                             <h3 class="ic-footer-widget-title"><img src="./assets/images/sticky-logo.png" alt="" width="50%"></h3>
                             <div class="ic-footer-widget-content">
                                 <div class="ic-footer-widget-about">
-                                    <p>Lorem ipsum dolor siti amet, consectetur adicing elit, sed do eiusmod tempor incididunt utte labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maeinas accumsan lacus vel facilisis. </p>
+                                    <!-- <p>Lorem ipsum dolor siti amet, consectetur adicing elit, sed do eiusmod tempor incididunt utte labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maeinas accumsan lacus vel facilisis. </p> -->
                                     <ul class="ic-social-profile">
                                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -907,11 +907,12 @@
                             <div class="ic-footer-widget-content">
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Address</h6>
-                                    <p class="ic-contact-info">Alfanso House, 2593 Timbercrest Road, Chisana Alaska, Badalas, United State</p>
+                                    <p class="ic-contact-info">Shop No. 8 & 9, Ghalot Majesty, Sector 46, Palm Beach Road, Seawoods, Navi Mumbai. </p>
                                 </div>
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Phone</h6>
-                                    <p class="ic-contact-info"><a href="tel:(+91)7-723-4608">(+91)7-723-4608</a></p>
+                                    <p class="ic-contact-info"><a href="tel:(+91)8058483333">(+91)8058483333</a></p>
+                                    <p class="ic-contact-info"><a href="tel:(+91)8828896711">(+91)8828896711</a></p>
                                 </div>
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Email</h6>
