--- a/contact.html
+++ b/contact.html
@@ -155,9 +155,10 @@
     <!-- Google Map Section Start Here -->
     <div class="ic-gmaps-section">
         <div class="ic-map-area">
-            <iframe
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3772.2192407894827!2d73.0104063142117!3d19.010058458983533!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c30e43616753%3A0x8b3a1d26250f0e0a!2sANZEN%20Suzuki!5e0!3m2!1sen!2sin!4v1665147816688!5m2!1sen!2sin" style="border:0;" allowfullscreen="true"  referrerpolicy="no-referrer-when-downgrade" aria-hidden="false" tabindex="0"></iframe>
+            <!-- <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3648.60887841715!2d90.41266621536414!3d23.868018590189028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c5d2f5f0d427%3A0x6004f6bcdd7583fd!2sITclan%20BD!5e0!3m2!1sen!2sbd!4v1598169132384!5m2!1sen!2sbd"
-                style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> -->
         </div>
     </div>
     <!-- Google Map Section Ending Here -->
@@ -175,7 +176,7 @@
                         <!-- Contact item -->
                         <div class="ic-contact-item">
                             <h6 class="ic-contact-title">Address:</h6>
-                            <p class="ic-contact-info">23 Uri Palestro, 2nd arr, 75002 Alska, USA</p>
+                            <p class="ic-contact-info">Shop No. 8 & 9, Ghalot Majesty, Sector 46, Palm Beach Road, Seawoods, Navi Mumbai.</p>
                         </div>
 
                         <!-- Contact item -->
@@ -187,13 +188,14 @@
                         <!-- Contact item -->
                         <div class="ic-contact-item">
                             <h6 class="ic-contact-title">Phone:</h6>
-                            <p class="ic-contact-info"><a href="tel:(+91)7-723-4608">(+91)7-723-4608</a></p>
+                            <p class="ic-contact-info"><a href="tel:(+91)8058483333">(+91)8058483333</a></p>
+                            <p class="ic-contact-info"><a href="tel:(+91)8828896711">(+91)8828896711</a></p>
                         </div>
 
                         <!-- Contact item -->
                         <div class="ic-contact-item ic-emergency">
                             <h6 class="ic-contact-title">For Any Emergency</h6>
-                            <p class="ic-contact-info"><a href="tel:+65998659855">Call: +659 9865 9855</a></p>
+                            <p class="ic-contact-info"><a href="tel:+65998659855">Call: +918058483333 </a></p>
                         </div>
                     </div>
                 </div>
@@ -250,7 +252,7 @@
                             <h3 class="ic-footer-widget-title"><img src="./assets/images/sticky-logo.png" alt="" width="50%"></h3>
                             <div class="ic-footer-widget-content">
                                 <div class="ic-footer-widget-about">
-                                    <p>Lorem ipsum dolor siti amet, consectetur adicing elit, sed do eiusmod tempor incididunt utte labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maeinas accumsan lacus vel facilisis. </p>
+                                    <!-- <p>Lorem ipsum dolor siti amet, consectetur adicing elit, sed do eiusmod tempor incididunt utte labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maeinas accumsan lacus vel facilisis. </p> -->
                                     <ul class="ic-social-profile">
                                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -287,11 +289,12 @@
                             <div class="ic-footer-widget-content">
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Address</h6>
-                                    <p class="ic-contact-info">Alfanso House, 2593 Timbercrest Road, Chisana Alaska, Badalas, United State</p>
+                                    <p class="ic-contact-info">Shop No. 8 & 9, Ghalot Majesty, Sector 46, Palm Beach Road, Seawoods, Navi Mumbai. </p>
                                 </div>
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Phone</h6>
-                                    <p class="ic-contact-info"><a href="tel:(+91)7-723-4608">(+91)7-723-4608</a></p>
+                                    <p class="ic-contact-info"><a href="tel:(+91)8058483333">(+91)8058483333</a></p>
+                                    <p class="ic-contact-info"><a href="tel:(+91)8828896711">(+91)8828896711</a></p>
                                 </div>
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Email</h6>
