--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/plugin.css">
     <!-- Main Stylesheet css -->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+
+     <!-- font awesome -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 <body>
 
@@ -245,6 +252,16 @@
         <div class="ic-banner-slider-progress"></div>
     </section>
     <!-- Banner Slider section end here -->
+
+
+ <!-- TODO: Enquiry Button -->
+ <div class="container-fluid btn-enquiry-container" data-aos="fade-up" data-aos-duration="2000">
+    <div class="wrap">
+        <a href="//wa.me/+918058483333"> <button class="button-enq "> <i class="fa fa-whatsapp"></i> Enquire Now</button> </a>
+    </div>
+</div>
+<!-- Enquiry Button close -->
+
 
     <!-- Overview section start here-->
     <section class="ic-overview ic-padding-120">
@@ -898,7 +915,7 @@
                             <h3 class="ic-footer-widget-title"><img src="./assets/images/sticky-logo.png" alt="" width="50%"></h3>
                             <div class="ic-footer-widget-content">
                                 <div class="ic-footer-widget-about">
-                                    <p>Lorem ipsum dolor siti amet, consectetur adicing elit, sed do eiusmod tempor incididunt utte labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maeinas accumsan lacus vel facilisis. </p>
+                                    <!-- <p>Lorem ipsum dolor siti amet, consectetur adicing elit, sed do eiusmod tempor incididunt utte labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maeinas accumsan lacus vel facilisis. </p> -->
                                     <ul class="ic-social-profile">
                                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -935,11 +952,12 @@
                             <div class="ic-footer-widget-content">
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Address</h6>
-                                    <p class="ic-contact-info">Alfanso House, 2593 Timbercrest Road, Chisana Alaska, Badalas, United State</p>
+                                    <p class="ic-contact-info">Shop No. 8 & 9, Ghalot Majesty, Sector 46, Palm Beach Road, Seawoods, Navi Mumbai. </p>
                                 </div>
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Phone</h6>
-                                    <p class="ic-contact-info"><a href="tel:(+91)7-723-4608">(+91)7-723-4608</a></p>
+                                    <p class="ic-contact-info"><a href="tel:(+91)8058483333">(+91)8058483333</a></p>
+                                    <p class="ic-contact-info"><a href="tel:(+91)8828896711">(+91)8828896711</a></p>
                                 </div>
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Email</h6>
