--- a/workshop.html
+++ b/workshop.html
@@ -93,8 +93,8 @@
                                 </a>
                             </div>
                         </div>
-                          <!-- Menu -->
-                          <nav class="ic-primary-menu">
+                        <!-- Menu -->
+                        <nav class="ic-primary-menu">
                             <div class="ic-menu-area">
                                 <div class="ic-main-menu-area">
                                     <ul class="ic-main-menu d-flex">
@@ -168,6 +168,30 @@
     </section>
     <!-- Breadcrumb section end here -->
 
+    <section class="workshop-section">
+        <div class="container-fluid">
+            <div class="row p-5 mt-3 mb-3">
+                <div class="col-sm-12 col-md-4 col-xl-4">
+                    <div class="workshop-img">
+                        <img src="./assets/images/product/motorcycles/gixer250-black.png" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4 col-xl-4">
+                    <div class="workshop-img">
+                        <img src="./assets/images/product/motorcycles/gixer250-black.png" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4 col-xl-4">
+                    <div class="workshop-img">
+                        <img src="./assets/images/product/motorcycles/gixer250-black.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <p class="lead display-4 text-center h2 text-uppercase">About Workshop</p>
+        <p class="p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque sunt hic a! Debitis nobis voluptatibus optio praesentium esse maiores aspernatur laudantium blanditiis laboriosam ab dolor, sequi, similique quisquam. Enim tempore iure molestias sequi animi ad dicta veniam possimus id perferendis vero, in sit neque velit quasi temporibus provident, voluptatibus porro?</p>
+    </section>
 
 
 
@@ -179,12 +203,8 @@
 
 
 
-
-
-
-
-      <!-- Newsletter section start here -->
-      <section class="ic-newsletter">
+    <!-- Newsletter section start here -->
+    <section class="ic-newsletter">
         <div class="container">
             <div class="row ic-newsletter-wrapper">
                 <div class="col-lg-3 col-md-1 col-sm-12"></div>
@@ -207,7 +227,7 @@
     <!-- Newsletter section end here -->
 
     <!-- Footer style two section start here -->
-    <section class="ic-footer style-two">
+    <section class="ic-footer">
 
         <!-- Footer top -->
         <div class="ic-footer-top ic-padding-120">
@@ -217,10 +237,11 @@
                     <!-- Footer widget -->
                     <div class="col-lg-5 col-md-12">
                         <div class="ic-footer-item">
-                            <h3 class="ic-footer-widget-title"><img src="./assets/images/sticky-logo.png" alt="" width="50%"></h3>
+                            <h3 class="ic-footer-widget-title"><img src="./assets/images/sticky-logo.png" alt=""
+                                    width="50%"></h3>
                             <div class="ic-footer-widget-content">
                                 <div class="ic-footer-widget-about">
-                                    <p>Lorem ipsum dolor siti amet, consectetur adicing elit, sed do eiusmod tempor incididunt utte labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maeinas accumsan lacus vel facilisis. </p>
+                                    <!-- <p>Lorem ipsum dolor siti amet, consectetur adicing elit, sed do eiusmod tempor incididunt utte labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maeinas accumsan lacus vel facilisis. </p> -->
                                     <ul class="ic-social-profile">
                                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -257,15 +278,18 @@
                             <div class="ic-footer-widget-content">
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Address</h6>
-                                    <p class="ic-contact-info">Alfanso House, 2593 Timbercrest Road, Chisana Alaska, Badalas, United State</p>
+                                    <p class="ic-contact-info">Shop No. 8 & 9, Ghalot Majesty, Sector 46, Palm Beach
+                                        Road, Seawoods, Navi Mumbai. </p>
                                 </div>
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Phone</h6>
-                                    <p class="ic-contact-info"><a href="tel:(+91)7-723-4608">(+91)7-723-4608</a></p>
+                                    <p class="ic-contact-info"><a href="tel:(+91)8058483333">(+91)8058483333</a></p>
+                                    <p class="ic-contact-info"><a href="tel:(+91)8828896711">(+91)8828896711</a></p>
                                 </div>
                                 <div class="ic-contact-item">
                                     <h6 class="ic-contact-title">Email</h6>
-                                    <p class="ic-contact-info"><a href="mailto:info@example.com">info@example.com</a></p>
+                                    <p class="ic-contact-info"><a href="mailto:info@example.com">info@example.com</a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -278,7 +302,7 @@
         <div class="ic-footer-bottom ic-padding-40">
             <div class="container">
                 <div class="ic-copyright-text text-center">
-                    <p>© Copyright 2022 <a href="index.html">Moonstone Conceptss.</a> All Rights Reserved. 
+                    <p>© Copyright 2022 <a href="index.html">Moonstone Conceptss.</a> All Rights Reserved.
                 </div>
                 <!-- <div class="ic-footer-payment text-center">
                     <img src="./assets/images/payment-method.png" alt="payment-mathod">
