--- a/gallery.html
+++ b/gallery.html
@@ -172,10 +172,10 @@
 
 
 
-<div class="p-5">
+<div class="p-5 ic-video-section">
     <div class="row">
             <div class="col-sm-12 col-md-4 col-xl-4">
-                <div class="ic-video">
+                <div class="ic-video ">
                     <img src="./assets/images/about/video.jpg" alt="video-thumb">
                     <div class="ic-video-content">
                         <!-- <h2>build<br> a custom bike</h2> -->
