--- a/about.html
+++ b/about.html
@@ -253,7 +253,7 @@
 
             <!-- Video Section start here -->
             <div class="ic-video">
-                <img src="./assets/images/about/video.jpg" alt="video-thumb">
+                <img src="./assets/images/about/5.jpeg" alt="video-thumb" class="rounded">
                 <div class="ic-video-content">
                     <!-- <h2>build<br> a custom bike</h2> -->
                     <a data-rel="lightcase:myCollection" href="./assets/images/about/desktop-autoexpo-video.mp4"
