--- a/index.html
+++ b/index.html
@@ -878,6 +878,27 @@
 
 
 
+    <!-- TODO: Home About us Section -->
+        <div class="container-fluid bg-light">
+            <div class="row p-5">
+                <div class="col-sm-12 col-md-6 col-xl-6 ic-section-header">
+                    <div class="about-content">
+                        <h1 class="ic-header-title">About <span>Us</span></h1>
+                    </div>
+                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium culpa ipsam amet repellendus aliquid veritatis, dolorem magni quod inventore cupiditate veniam dicta, modi eveniet et excepturi sunt. Suscipit dicta dolor incidunt praesentium placeat, adipisci ad fuga rem dignissimos voluptate nulla excepturi nam vel harum temporibus maxime sed aliquid recusandae magni quas est maiores animi officia inventore? Neque fuga mollitia natus itaque nisi ea modi delectus repellendus! Numquam deleniti, enim quisquam provident beatae velit ad eos suscipit iusto ex nisi optio nesciunt, illum accusantium aliquam odio aperiam eaque unde voluptatum. Qui rerum inventore rem est nostrum ad earum mollitia, facilis saepe!</p>
+                    <div class="about-btn">
+                        <a class="ic-custom-btn ic-btn-lg theme-color" href="./about.html"> Know More..</a>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-xl-6">
+                    <div class="about-img">
+                        <img src="./assets/images/gallery/2.jpeg" alt="" class="img-fluid rounded">
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!--  Home About us Section close-->
+
 
     <!-- Newsletter section start here -->
     <section class="ic-newsletter">
