--- a/workshop.html
+++ b/workshop.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/plugin.css">
     <!-- Main Stylesheet css -->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+
+    <link rel="stylesheet" href="./assets/css/lightbox.min.css">
+    <script src="./assets/js/lightbox-plus-jquery.min.js"></script>
 </head>
 
 <body>
@@ -170,27 +173,19 @@
 
     <section class="workshop-section">
         <div class="container-fluid">
-            <div class="row p-5 mt-3 mb-3">
-                <div class="col-sm-12 col-md-4 col-xl-4">
-                    <div class="workshop-img">
-                        <img src="./assets/images/product/motorcycles/gixer250-black.png" alt="">
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-4 col-xl-4">
-                    <div class="workshop-img">
-                        <img src="./assets/images/product/motorcycles/gixer250-black.png" alt="">
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-4 col-xl-4">
-                    <div class="workshop-img">
-                        <img src="./assets/images/product/motorcycles/gixer250-black.png" alt="">
-                    </div>
+            <div class="row p-5 ">
+                <div class="gallery-img">
+                    <a href="./assets/images/workshop/1.jpeg" data-lightbox="myGallery" data-title="Workshop Image"><img
+                            src="./assets/images/workshop/1.jpeg" alt="" class="img-thumbnail img-fluid"></a>
                 </div>
             </div>
         </div>
 
         <p class="lead display-4 text-center h2 text-uppercase">About Workshop</p>
-        <p class="p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque sunt hic a! Debitis nobis voluptatibus optio praesentium esse maiores aspernatur laudantium blanditiis laboriosam ab dolor, sequi, similique quisquam. Enim tempore iure molestias sequi animi ad dicta veniam possimus id perferendis vero, in sit neque velit quasi temporibus provident, voluptatibus porro?</p>
+        <p class="p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque sunt hic a! Debitis nobis
+            voluptatibus optio praesentium esse maiores aspernatur laudantium blanditiis laboriosam ab dolor, sequi,
+            similique quisquam. Enim tempore iure molestias sequi animi ad dicta veniam possimus id perferendis vero, in
+            sit neque velit quasi temporibus provident, voluptatibus porro?</p>
     </section>
 
 
