--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
                         <h1 class="ic-header-title">About <span>Us</span></h1>
                     </div>
                     <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium culpa ipsam amet repellendus aliquid veritatis, dolorem magni quod inventore cupiditate veniam dicta, modi eveniet et excepturi sunt. Suscipit dicta dolor incidunt praesentium placeat, adipisci ad fuga rem dignissimos voluptate nulla excepturi nam vel harum temporibus maxime sed aliquid recusandae magni quas est maiores animi officia inventore? Neque fuga mollitia natus itaque nisi ea modi delectus repellendus! Numquam deleniti, enim quisquam provident beatae velit ad eos suscipit iusto ex nisi optio nesciunt, illum accusantium aliquam odio aperiam eaque unde voluptatum. Qui rerum inventore rem est nostrum ad earum mollitia, facilis saepe!</p>
-                    <div class="about-btn">
+                    <div class="about-btn mt-2 mb-4">
                         <a class="ic-custom-btn ic-btn-lg theme-color" href="./about.html"> Know More..</a>
                     </div>
                 </div>
